; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_ispvideo.c_omap3isp_video_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/platform/omap3isp/extr_ispvideo.c_omap3isp_video_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.isp_video = type { i32, i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @omap3isp_video_cleanup(%struct.isp_video* %0) #0 {
  %2 = alloca %struct.isp_video*, align 8
  store %struct.isp_video* %0, %struct.isp_video** %2, align 8
  %3 = load %struct.isp_video*, %struct.isp_video** %2, align 8
  %4 = getelementptr inbounds %struct.isp_video, %struct.isp_video* %3, i32 0, i32 3
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = call i32 @media_entity_cleanup(i32* %5)
  %7 = load %struct.isp_video*, %struct.isp_video** %2, align 8
  %8 = getelementptr inbounds %struct.isp_video, %struct.isp_video* %7, i32 0, i32 2
  %9 = call i32 @mutex_destroy(i32* %8)
  %10 = load %struct.isp_video*, %struct.isp_video** %2, align 8
  %11 = getelementptr inbounds %struct.isp_video, %struct.isp_video* %10, i32 0, i32 1
  %12 = call i32 @mutex_destroy(i32* %11)
  %13 = load %struct.isp_video*, %struct.isp_video** %2, align 8
  %14 = getelementptr inbounds %struct.isp_video, %struct.isp_video* %13, i32 0, i32 0
  %15 = call i32 @mutex_destroy(i32* %14)
  ret void
}

declare dso_local i32 @media_entity_cleanup(i32*) #1

declare dso_local i32 @mutex_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
